Fixed bottom bar blending and names clipping early

--- a/css/Discord Reborn.css
+++ b/css/Discord Reborn.css
@@ -636,7 +636,7 @@ div.message-group {background-color: rgba(0,0,0,0.5)!important;}
 
 .theme-dark .modal-3HOjGZ {background-color: rgba(0,0,0,0.80) !important;}
 
-.accountDetails-15i-_e .username{background-color: transparent !important;border-top: 2px solid rgba(0, 0, 0, 0.8);}
+.accountDetails-15i-_e .username{background-color: rgba(0, 0, 0, 0.2) !important;border-top: 2px solid rgba(0, 0, 0, 0.8);}
 
 /* Replace Light/Dark Mode Text - MasicoreLord */
 /* -Light Mode- */
@@ -706,7 +706,7 @@ div.message-group {background-color: rgba(0,0,0,0.5)!important;}
 
 .private .channelTextArea-os01xC{margin: 20px 240px 32px 0px;}
 
-.accountDetails-15i-_e{right: 0px !important;bottom: 14px !important;max-width: 240px !important;min-width: 240px !important;}
+.accountDetails-15i-_e{right: 0px !important;bottom: 0px !important;max-width: 240px !important;min-width: 240px !important;height: 72px !important;}
 
 .private-channels ~ .container-iksrDt .accountDetails-15i-_e .username{border-top: 2px solid rgba(0, 0, 0, 0.3);}
 
